fix: Add responsive design to review page
Add margins and change width/height percentages on restaurant review
page to ensure that map does not overlap with other elements on page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
-	max-width: 100%; /**/
+	/*max-width: 100%; /**/
 }
 /* ====================== Navigation ====================== */
 nav {
@@ -103,17 +103,18 @@ nav h1 a {
   height: 400px;
   width: 100%;
   background-color: #ccc;
-	margin-top: 50px; /**/
+	/*margin-top: 50px; /**/
+	/*position: fixed; /* YOU LEFT OFF HERE CEDENO!!!!!!!!!!!!!! The image and map are fighting for the spot!!*/
 }
 
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  /*width: 100%;*/
-  height: 100%;
+  width: 100%;
+  height: 120px;
   background-color: #3397DB;
   align-items: center;
 	padding: 5px;
-	max-width: 100%;
+	max-width: 100%; /**/
 }
 .filter-options h2 {
   color: white;
@@ -121,7 +122,7 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
-	max-width: 100%;
+	max-width: 100%; /**/
 }
 .filter-options select {
   background-color: white;
@@ -141,10 +142,10 @@ nav h1 a {
   list-style: outside none none;
   margin: 0;
   padding: 30px 15px 60px;
-  text-align: center;
+  text-align: center;   /*in original code but do we need?? 145 146 147*/
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	/*align-items: center;*/
 }
 #restaurants-list li {
   background-color: #fff;
@@ -201,10 +202,11 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 40%; /**/
-  position: fixed;
+  height: 10%; /*looking good*/
+  position: absolute; /*THIS IS WHAT MAKES MAP DISAPPEAR!!*/
   right: 0;
-  top: 80px;
+  top: 130px;
+	width: 100%;
 }
 .inside #map {
   background-color: #ccc;
@@ -214,7 +216,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  max-width: 100%; /**/
 }
 #restaurant-name {
   color: #f18200;
@@ -227,9 +229,9 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 100%; /**/
-	align-items: center; /**/
-	margin-top: 75px;
+	width: 90%; /**/
+	/*align-items: center; /**/
+	/*margin-top: 75px;*/ /*DOUBLE CHECK HERE!!!!!*/
 }
 #restaurant-address {
   font-size: 12pt;
@@ -250,12 +252,12 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-	top: 100px; /**/
-  /*width: 100%; /*change for desktop?*/
+  padding: 400px 40px 30px;
+	/*top: 100px; /**/
+  /*width: 50%; /*change for desktop?*/
 }
 #reviews-container {
-  padding: 30px 40px 80px; /**/
+  padding: 30px 40px 80px;
 }
 #reviews-container h2 {
   color: #f58500;
